docs/v1.4.5/en/api/campaign/TradeAgreementsCampaignBehavior.md
<!-- BEGIN BREADCRUMB -->
**Home** → **API Index** → **Area** → `TradeAgreementsCampaignBehavior`
- [← Area / Back to campaign](./)
- [↑ API Index](../)
- [🏠 Home v1.4.5](../../)
- [⭐ Version Architecture](../../architecture/)
<!-- END BREADCRUMB -->
# TradeAgreementsCampaignBehavior

**Namespace:** TaleWorlds.CampaignSystem.CampaignBehaviors
**Module:** TaleWorlds.CampaignSystem
**Type:** `public class TradeAgreementsCampaignBehavior : CampaignBehaviorBase, ITradeAgreementsCampaignBehavior`
**Base:** `CampaignBehaviorBase`
**File:** `Bannerlord.Source/bin/TaleWorlds.CampaignSystem/TaleWorlds.CampaignSystem.CampaignBehaviors/TradeAgreementsCampaignBehavior.cs`

## Overview

`TradeAgreementsCampaignBehavior` lives in `TaleWorlds.CampaignSystem.CampaignBehaviors` and exposes the state, behavior, or workflow entry points of that subsystem to mod developers through its public members. Read its properties as “what state it owns” and its methods as “what actions it allows”.

## Mental Model

Start from namespace `TaleWorlds.CampaignSystem.CampaignBehaviors` to place it in the stack, then inspect its public methods: if it mainly exposes Get/Set members, it is likely a state object; if it centers on Create/Apply/Execute verbs, it behaves more like a service or workflow entry point.

## Key Methods

### AddGainedGoldToKingdom
`public TradeAgreement AddGainedGoldToKingdom(Kingdom kingdom, int gold)`

**Purpose:** Adds `gained gold to kingdom` to the current collection or state.

### OnGoldSharedInKingdom
`public TradeAgreement OnGoldSharedInKingdom(Kingdom kingdom, int gold)`

**Purpose:** Called when the `gold shared in kingdom` event is raised.

### AutoGeneratedStaticCollectObjectsTradeAgreement
`public static void AutoGeneratedStaticCollectObjectsTradeAgreement(object o, List<object> collectedObjects)`

**Purpose:** Handles logic related to `auto generated static collect objects trade agreement`.

### RegisterEvents
`public override void RegisterEvents()`

**Purpose:** Handles logic related to `register events`.

### OnTradeAgreementOfferedToPlayer
`public void OnTradeAgreementOfferedToPlayer(Kingdom fromKingdom)`

**Purpose:** Called when the `trade agreement offered to player` event is raised.

### SyncData
`public override void SyncData(IDataStore dataStore)`

**Purpose:** Handles logic related to `sync data`.

### MakeTradeAgreement
`public void MakeTradeAgreement(Kingdom kingdom1, Kingdom kingdom2, CampaignTime duration)`

**Purpose:** Handles logic related to `make trade agreement`.

### EndTradeAgreementsOfKingdom
`public void EndTradeAgreementsOfKingdom(Kingdom kingdom)`

**Purpose:** Handles logic related to `end trade agreements of kingdom`.

### EndTradeAgreement
`public void EndTradeAgreement(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** Handles logic related to `end trade agreement`.

### HasTradeAgreement
`public bool HasTradeAgreement(Kingdom kingdom1, Kingdom kingdom2, out TradeAgreement tradeAgreement)`

**Purpose:** Checks whether the current object has/contains `trade agreement`.

### GetTradeAgreementEndDate
`public CampaignTime GetTradeAgreementEndDate(Kingdom kingdom1, Kingdom kingdom2)`

**Purpose:** Gets the current value of `trade agreement end date`.

### OnTradeGoldDistributedInKingdom
`public void OnTradeGoldDistributedInKingdom(Kingdom kingdom1, Kingdom kingdom2, Clan clan, int share)`

**Purpose:** Called when the `trade gold distributed in kingdom` event is raised.

## Usage Example

```csharp
var value = new TradeAgreementsCampaignBehavior();
value.AddGainedGoldToKingdom(kingdom, 0);
```

## See Also

- [Complete Class Catalog](../catalog)